--- a/Index.html
+++ b/Index.html
@@ -18,87 +18,87 @@
       
      <div class="gallery">
         <figure class="card">
-          <img src="pic/image1.jpg" alt="">
+          <img src="image1.jpg" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image2.jpg" alt="">
+          <img src="image2.jpg" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image3.jpeg" alt="">
+          <img src="image3.jpeg" alt="">
           <figcaption>Mondal</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image4.jpeg" alt="">
+          <img src="image4.jpeg" alt="">
           <figcaption>Nit</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image5.jpeg" alt="">
+          <img src="image5.jpeg" alt="">
           <figcaption>Durgapur</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image6.jpeg" alt="">
+          <img src="image6.jpeg" alt="">
           <figcaption>Electrical</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image7.jpeg" alt="">
+          <img src="image7.jpeg" alt="">
           <figcaption>Nit Durgapur</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image8.jpeg" alt="">
+          <img src="image8.jpeg" alt="">
           <figcaption>Mondal</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image9.jpeg" alt="">
+          <img src="image9.jpeg" alt="">
           <figcaption>Mondal</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image10.jpg" title="Mr.Mondal" alt="">
+          <img src="image10.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image11.jpg" title="Mr.Mondal" alt="">
+          <img src="image11.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image12.jpg" title="Mr.Mondal" alt="">
+          <img src="image12.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image13.jpg" title="Mr.Mondal" alt="">
+          <img src="image13.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image14.jpg" title="Mr.Mondal" alt="">
+          <img src="image14.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image15.jpg" title="Mr.Mondal" alt="">
+          <img src="image15.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image16.jpg" title="Mr.Mondal" alt="">
+          <img src="image16.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image17.jpg" title="Mr.Mondal" alt="">
+          <img src="image17.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image18.jpg" title="Mr.Mondal" alt="">
+          <img src="image18.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image19.jpg" title="Mr.Mondal" alt="">
+          <img src="image19.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image20.jpg" title="Mr.Mondal" alt="">
+          <img src="image20.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
         <figure class="card">
-          <img src="pic/image21.jpg" title="Mr.Mondal" alt="">
+          <img src="image21.jpg" title="Mr.Mondal" alt="">
           <figcaption>Prasanta</figcaption>
         </figure>
       </div>
